# EffectiveModernCpp

./: CMakeLists.txt  EffectiveModernCpp笔记.md  tencent.cpp
1.DeducingTypes/: CMakeLists.txt  base1.cpp  base2.cpp  base3.cpp  base4.cpp  base6.cpp  item1.cpp  item1_bck.cpp  item23.cpp  item3.cpp  item7.cpp  item9.cpp  test.cpp
2.Auto/: CMakeLists.txt  base7.cpp  base9.cpp  test.cpp
3.MovingToModernCpp/: CMakeLists.txt  base10.cpp  base11.cpp  base11_2.cpp  base11_3.cpp  base12.cpp  item10.cpp  item15.cpp  item17.cpp  item8.cpp  temp.cpp
4.SmartPointers/: CMakeLists.txt  base14.cpp  base15.cpp  base16.cpp  shared_ptr.cpp  u_ptr.cpp  weak_ptr.cpp
5/: CMakeLists.txt  base17.cpp
